@@ -1,3 +1,8 @@
+2003-08-11  Bruno Haible  <bruno@clisp.org>
+
+	* vasnprintf.c (local_wcslen): New function, for Solaris 2.5.1.
+	(VASNPRINTF): Use it instead of wcslen.
+
 2003-06-20  Bruno Haible  <bruno@clisp.org>
 
 	* configure.ac: Invoke gt_PRINTF_POSIX.
