@@ -1,3 +1,8 @@
+2003-08-11  Bruno Haible  <bruno@clisp.org>
+
+	* vasnprintf.c (local_wcslen): New function, for Solaris 2.5.1.
+	(VASNPRINTF): Use it instead of wcslen.
+
 2003-08-01  Bruno Haible  <bruno@clisp.org>
 
 	* relocatable.c (find_shared_library_fullname): Disable the code on
